[gd_scene load_steps=2 format=3 uid="uid://c8k6y4n2x0m5q"]

[ext_resource type="Script" path="res://src/ui/components/combat/rules/rule_editor_dialog.gd" id="1_n4r3p"]

[node name="RuleEditorDialog" type="Window"]
title = "House Rule Editor"
initial_position = 2
size = Vector2i(600, 500)
visible = false
transient = true
exclusive = true
script = ExtResource("1_n4r3p")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="FormContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FormContainer/NameContainer"]
layout_mode = 2
text = "Rule Name"

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/FormContainer/NameContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter rule name..."

[node name="CategoryContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FormContainer/CategoryContainer"]
layout_mode = 2
text = "Category"

[node name="CategoryOption" type="OptionButton" parent="MarginContainer/VBoxContainer/FormContainer/CategoryContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DescriptionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FormContainer/DescriptionContainer"]
layout_mode = 2
text = "Description"

[node name="DescriptionEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/FormContainer/DescriptionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "Enter rule description..."
wrap_mode = 1

[node name="EffectsSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EffectsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EffectsSection/Header"]
layout_mode = 2
text = "Effects"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/EffectsSection/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddEffectButton" type="Button" parent="MarginContainer/VBoxContainer/EffectsSection/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Effect"

[node name="EffectsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/EffectsSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save" 